[Baseline] 冻结 JDK17 与 Spring AI 2.0/Boot 4.0.7 兼容矩阵